ATLAS-1350: add frontend tests