@@ -1,7 +1,6 @@
 package ch.sbb.atlas.versioning.service;
 
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import ch.sbb.atlas.versioning.BaseTest.VersionableObject.Fields;
@@ -44,10 +43,9 @@ public class VersionableServiceScenario13Test extends VersionableServiceBaseTest
         List.of(versionableObject1, versionableObject2));
 
     //then
-    assertThat(result).isNotNull();
     assertThat(result).hasSize(3);
     List<VersionedObject> sortedVersionedObjects =
-        result.stream().sorted(comparing(VersionedObject::getValidFrom)).collect(toList());
+        result.stream().sorted(comparing(VersionedObject::getValidFrom)).toList();
 
     VersionedObject firstVersionedObject = sortedVersionedObjects.get(0);
     assertThat(firstVersionedObject.getAction()).isEqualTo(VersioningAction.NOT_TOUCHED);
@@ -130,7 +128,6 @@ public class VersionableServiceScenario13Test extends VersionableServiceBaseTest
         List.of(versionableObject1, versionableObject2));
 
     //then
-    assertThat(result).isNotNull();
     assertThat(result).hasSize(3);
     List<VersionedObject> sortedVersionedObjects =
         result.stream().sorted(comparing(VersionedObject::getValidFrom)).toList();
@@ -216,7 +213,6 @@ public class VersionableServiceScenario13Test extends VersionableServiceBaseTest
         List.of(versionableObject1, versionableObject2, versionableObject3, versionableObject4));
 
     //then
-    assertThat(result).isNotNull();
     assertThat(result).hasSize(5);
     List<VersionedObject> sortedVersionedObjects =
         result.stream().sorted(comparing(VersionedObject::getValidFrom)).toList();
@@ -336,7 +332,6 @@ public class VersionableServiceScenario13Test extends VersionableServiceBaseTest
         List.of(versionableObject1, versionableObject2, versionableObject3, versionableObject4));
 
     //then
-    assertThat(result).isNotNull();
     assertThat(result).hasSize(5);
     List<VersionedObject> sortedVersionedObjects =
         result.stream().sorted(comparing(VersionedObject::getValidFrom)).toList();
@@ -455,7 +450,6 @@ public class VersionableServiceScenario13Test extends VersionableServiceBaseTest
         List.of(versionableObject1, versionableObject2, versionableObject3, versionableObject4));
 
     //then
-    assertThat(result).isNotNull();
     assertThat(result).hasSize(5);
     List<VersionedObject> sortedVersionedObjects =
         result.stream().sorted(comparing(VersionedObject::getValidFrom)).toList();
@@ -574,7 +568,6 @@ public class VersionableServiceScenario13Test extends VersionableServiceBaseTest
         List.of(versionableObject1, versionableObject2, versionableObject3, versionableObject4));
 
     //then
-    assertThat(result).isNotNull();
     assertThat(result).hasSize(5);
     List<VersionedObject> sortedVersionedObjects =
         result.stream().sorted(comparing(VersionedObject::getValidFrom)).toList();
